fix: hide scrollbar on .partners

--- a/sass/media/_media-768.sass
+++ b/sass/media/_media-768.sass
@@ -109,6 +109,10 @@
         &-wrapper
             flex-wrap: nowrap
             overflow-x: scroll
+            -ms-overflow-style: none
+            scrollbar-width: none
+            &::-webkit-scrollbar 
+                display: none
         &__title
             margin-bottom: 20px
         &__img
